# RadEye

./: README.md
Pi/TCP/Initial/: ImageProcessor.hpp  PC_Commands.cpp  PC_Commands.hpp  TicDriver.c  client.c  client.cpp  client_ii.cpp  tcp_test
Pi/TCP/Initial/Image Processing/BlobDetector/include/: BlobDetector.hpp
Pi/TCP/Initial/Image Processing/BlobDetector/test/: BlobDetectorTest.cpp  CMakeLists.txt  test.sh
Pi/TCP/Initial/Image Processing/CornerDetector/src/: CornerDetector.cpp
Pi/TCP/Initial/Image Processing/CornerDetector/test/: CornerDetectorTest.cpp  test.sh
Pi/TCP/Initial/Image Processing/Cropper/src/: Cropper.cpp
Pi/TCP/Initial/Image Processing/Cropper/test/: CMakeLists.txt  CropperTest.cpp
Pi/TCP/Initial/Image Processing/GroundTruthEvaluator/test/: GroundTruthEvaluatorTest.cpp
Pi/TCP/Initial/Image Processing/GroundTruthEvaluator__under_construction/include/: GroundTruthEvaluator.hpp
Pi/TCP/Initial/Image Processing/GroundTruthEvaluator__under_construction/src/: GroundTruthEvaluator.cpp
Pi/TCP/Initial/Image Processing/GroundTruthEvaluator__under_construction/test/: CMakeLists.txt  GroundTruthEvaluatorTest.cpp
Pi/TCP/Initial/Image Processing/Warper/src/: Warper.cpp
Pi/TCP/Initial/Image Processing/Warper/test/: WarperTest.cpp
Pi/TCP/Initial/TCP/: CMakeLists.txt  PC_Commands.cpp  PC_Commands.hpp  TicDriver.c  client_ii.cpp  test.sh
Pi/TCP/Initial/TCP/BlobDetector/include/: BlobDetector.hpp
Pi/TCP/Initial/TCP/BlobDetector/src/: BlobDetector.cpp
Pi/TCP/Initial/TCP/BlobDetector/test/: BlobDetectorTest.cpp  CMakeLists.txt
Pi/TCP/Initial/TCP/CornerDetector/include/: CornerDetector.hpp
Pi/TCP/Initial/TCP/CornerDetector/src/: CornerDetector.cpp
Pi/TCP/Initial/TCP/CornerDetector/test/: CMakeLists.txt
Pi/TCP/Initial/TCP/CornerDetector/test_1Jul2020/: CMakeLists.txt  CornerDetectorTest.cpp
Pi/TCP/Initial/TCP/CornerDetector/test_29Jun2020/: CornerDetectorTest.cpp
Pi/TCP/Initial/TCP/Cropper/include/: Cropper.hpp
Pi/TCP/Initial/TCP/Cropper/testNew/: test.sh
Pi/TCP/Initial/TCP/Cropper/test_1Jul2020/: CropperTest.cpp
Pi/TCP/Initial/TCP/GroundTruthEvaluator/include/: GroundTruthEvaluator.hpp
Pi/TCP/Initial/TCP/GroundTruthEvaluator/src/: GroundTruthEvaluator.cpp
Pi/TCP/Initial/TCP/GroundTruthEvaluator/test/: GroundTruthEvaluatorTest.cpp  GroundTruthEvaluatorTest1.cpp  GroundTruthEvaluatorTest2.cpp  test.sh
Pi/TCP/Initial/TCP/GroundTruthEvaluator/test/test_build/: CMakeCache.txt  GroundTruthEvaluatorTest  Makefile  cmake_install.cmake
Pi/TCP/Initial/TCP/GroundTruthEvaluator/test_1Jul2020/: GroundTruthEvaluatorTest.cpp  coordinates.csv  showCoordinates.py
Pi/TCP/Initial/TCP/GroundTruthEvaluator/test_1Jul2020/test_build/: CMakeCache.txt  GroundTruthEvaluatorTest  Makefile  cmake_install.cmake
Pi/TCP/Initial/TCP/GroundTruthEvaluator/test_29Jun2020/: CMakeLists.txt  GroundTruthEvaluatorTest.cpp  coordinates.csv  test.sh
Pi/TCP/Initial/TCP/GroundTruthEvaluator/test_29Jun2020/test_build/: CMakeCache.txt  GroundTruthEvaluatorTest  Makefile  cmake_install.cmake
Pi/TCP/Initial/TCP/Warper/include/: Warper.hpp
Pi/TCP/Initial/TCP/Warper/test/: CMakeLists.txt  WarperTest.cpp  test.sh
Pi/TCP/Initial/TCP/tcp_build/: CMakeCache.txt  Makefile  cmake_install.cmake  tcp_pi
Pi/Vision Test/: ImageProcessor.py
Pi/Vision/C++/four_corners/: four_corners.cpp
Pi/Vision/C++/raspicam/: main.cpp
Pi/Vision/Callibration/: init.c
